--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "license": "MIT",
   "engines": {
-  "node": "8.x",
-  "npm": "5.x"
-},
+    "node": "8.x",
+    "npm": "5.x"
+  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host 0.0.0.0 --port 8080",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -30,7 +30,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.3",
+    "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
